tests/errors/spread-no-operand/main.pa
def xs = [1, 2, ...]
